--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </form>
 
       <div id="msg" class="msg hidden"></div>
-      <small class="note">Double opt-in. You can unsubscribe anytime.</small>
+      <small class="note">You can unsubscribe anytime.</small>
     </div>
   </div>
 
